[package]
name = "fsa_rust" # the name of the package
version = "0.1.0"    # the current version, obeying semver
edition = "2018"
authors = ["Max Strini <max@waldtaube.net>"]

[dependencies]
# winrt = { path = "../../src/winrt-rust", features = ["windows-system", "windows-ui"] }
windows = "0.3.1"
bindings = {path = "bindings"}
bitflags = "1"
libc = "0.2"
